--- a/README
+++ b/README
@@ -1,12 +1,5 @@
-Twitter Client Class for PHP 5.
+Tuitter
+Object-oriented Twitter client for PHP5
 
-This is alpha version.
-More information is coming later.
-
-Just you can test it like below;
-
-$t = new Tuitter('your_account', 'your_password');
-$followers = $t->getFollowers();
-foreach($followers as $follower){
-	echo $follower->screen_name."\n";
-}
+Documentation
+  http://dev.screw-axis.com/doc/tuitter/
